Table Staff {
  staff_id int [pk, increment]
  full_name varchar(100)
  role varchar(20) // Replace enum with varchar
  email varchar(255) [unique]
  password_hash varchar(255)
  created_at timestamp
}

Table Authors {
  author_id int [pk, increment]
  author_name varchar(255)
  nationality varchar(100)
  birth_year int // Replaced year with int
}

Table Books {
  book_id int [pk, increment]
  title varchar(255)
  isbn varchar(20) [unique]
  publisher varchar(255)
  publication_year int // Replaced year with int
  total_copies int
  available_copies int
}

Table Book_Authors {
  book_id int
  author_id int
  primary key (book_id, author_id)
}

Table Borrowers {
  borrower_id int [pk, increment]
  first_name varchar(100)
  last_name varchar(100)
  email varchar(255) [unique]
  phone varchar(20)
  membership_date date
  status varchar(20) // Replaced enum with varchar
}

Table Loans {
  loan_id int [pk, increment]
  book_id int
  borrower_id int
  staff_id int
  loan_date date
  due_date date
  return_date date
  status varchar(20) // Replaced enum with varchar
}

Table Loan_History {
  history_id int [pk, increment]
  book_id int
  borrower_id int
  loan_date date
  due_date date
  return_date date
  processed_by int
}

Ref: Book_Authors.book_id > Books.book_id
Ref: Book_Authors.author_id > Authors.author_id
Ref: Loans.book_id > Books.book_id
Ref: Loans.borrower_id > Borrowers.borrower_id
Ref: Loans.staff_id > Staff.staff_id
Ref: Loan_History.book_id > Books.book_id
Ref: Loan_History.borrower_id > Borrowers.borrower_id
Ref: Loan_History.processed_by > Staff.staff_id
